# flask-session-app

./: .config.py.swp  .gitignore.swp  README.md  config.py  pyproject.toml
app/: .__init__.py.swp  README.md  __init__.py  config.py  intro.md
app/app/: __init__.py
app/app/static/: main.js
app/app/templates/: about.html  form.html  index.html  layout.html
app/app/templates/components/: navigation.html
app/app/utils/: validate.py
app/pages/: blog1.md  intro.md  lorem.md  test.md  text.html
app/static/: .main.js.swp  .styles.css.swp  main.js  styles.css
app/templates/: .form.html.swo  .form.html.swp  .index.html.swp  about.html  blog.html  blogs.html  form.html  layout.html  text.html
app/templates/components/: .navigation.html.swp  navigation.html
app/utils/: .__init__.py.swp  __init__.py
