[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["majamarijan <majapianist@gmail.com>"]
readme = "README.md"
packages=[{include="app"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
